<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_edit_overlay"
        android:title="@string/emulation_touch_overlay_edit" />

    <item
        android:id="@+id/menu_overlay_presets"
        android:title="@string/overlay_presets">
        <menu>
            <item
                android:id="@+id/menu_preset_default"
                android:title="@string/overlay_preset_default" />
            <item
                android:id="@+id/menu_preset_big"
                android:title="@string/overlay_preset_big" />
            <item
                android:id="@+id/menu_preset_swapped"
                android:title="@string/overlay_preset_swapped" />
        </menu>
    </item>

    <item
        android:id="@+id/menu_snap_to_grid"
        android:title="@string/emulation_snap_to_grid"
        android:checkable="true" />

    <item
        android:id="@+id/menu_adjust_overlay"
        android:title="@string/emulation_control_adjust" />

    <item
        android:id="@+id/menu_toggle_controls"
        android:title="@string/emulation_toggle_controls" />

    <item
        android:id="@+id/menu_rel_stick_center"
        android:title="@string/emulation_rel_stick_center"
        android:checkable="true" />

    <item
        android:id="@+id/menu_dpad_slide"
        android:title="@string/emulation_dpad_slide"
        android:checkable="true" />

    <item
        android:id="@+id/menu_haptics"
        android:title="@string/emulation_haptics"
        android:checkable="true" />

    <item
        android:id="@+id/menu_touchscreen"
        android:title="@string/touchscreen"
        android:checkable="true" />

    <item
        android:id="@+id/menu_reset_overlay"
        android:title="@string/emulation_touch_overlay_reset" />

</menu>
