<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">

    <item
        android:id="@+id/menu_pause_emulation"
        android:icon="@drawable/ic_pause"
        android:title="@string/emulation_pause" />

    <!-- Hidden for now: savestate is a same-session-only MVP, confirmed unreliable for real
         multi-threaded games (see src/core/savestate.h). The underlying code stays in place,
         just unreachable from the UI. -->
    <item
        android:id="@+id/menu_quick_save_state"
        android:icon="@drawable/ic_save"
        android:title="@string/emulation_quick_save_state"
        android:visible="false" />

    <item
        android:id="@+id/menu_quick_load_state"
        android:icon="@drawable/ic_restore"
        android:title="@string/emulation_quick_load_state"
        android:visible="false" />

    <item
        android:id="@+id/menu_lemon_cheater"
        android:icon="@drawable/ic_search"
        android:title="@string/lemon_cheater" />

    <item
        android:id="@+id/menu_lemon_macro"
        android:icon="@drawable/ic_record"
        android:title="@string/lemon_macro" />

    <item
        android:id="@+id/menu_quick_overlay"
        android:icon="@drawable/ic_controller"
        android:title="@string/emulation_show_overlay"/>

    <item
        android:id="@+id/menu_overlay_layout"
        android:icon="@drawable/ic_overlay"
        android:title="@string/emulation_overlay_layout" />

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/preferences_settings" />

    <item
        android:id="@+id/menu_quick_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/quick_settings" />

    <item
        android:id="@+id/menu_settings_per_game"
        android:icon="@drawable/ic_settings_outline"
        android:title="@string/per_game_settings" />

    <item
        android:id="@+id/menu_controls"
        android:icon="@drawable/ic_controller"
        android:title="@string/preferences_controls" />

    <item
        android:id="@+id/menu_multiplayer"
        android:icon="@drawable/ic_two_users"
        android:title="@string/multiplayer" />

    <item
        android:id="@+id/menu_load_amiibo"
        android:icon="@drawable/ic_nfc"
        android:title="@string/load_amiibo" />


    <item
        android:id="@+id/menu_overlay_controls"
        android:icon="@drawable/ic_overlay"
        android:title="@string/emulation_input_overlay" />

    <item
        android:id="@+id/menu_lock_drawer"
        android:icon="@drawable/ic_unlock"
        android:title="@string/emulation_input_overlay" />

    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/emulation_exit" />

</menu>
